HTML5Application/public_html/index.css
/* Styling for the main body*/
body {
  
  background: #87cefa;
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  
  
      
}
.container {
  position: relative;
  margin: 0 auto;
  width: 94%;
  font-family: helvetica, sans-serif;
}
/* Right column (nav id)  */


             

/* Make the columns the same height as each other */
		#container {
			overflow: hidden;
		}



/* background color when you hover over the menu options */
                 a:hover {
                background-color:#86a3d5;
                
                }
                 /* styling for pause button*/
                a{
                  border-style: none;
                  
                  text-decoration: none;  
                  font-size: 15px;
                  
                }
                



/* Styling for the header*/
#header {
  z-index: 2;
  position: fixed;
  width: 100%;
  height: 60px;
  line-height: 60px;
  background: #222;
  color: white;
  box-sizing:border-box;
box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.15);
font-size: large;


}
/* Styling for the header H1 'Sinking Ships'*/
#header h1 {
  top: 0px;
  margin: 0px;
  text-transform: uppercase;
  font-size: 2vw;
  font-weight: bold;
}
/* Styling for navigation menus*/
#nav {
  position: absolute;
  right: 0;
  top: -15px;
  height: 60px;
}
/* Styling for navigation menu*/
#nav ul li {
  float: left;
  list-style: none;
  
}
/* Styling for navigation menu*/
#nav ul li a {
  display: block;
  color: white;
  text-decoration: none;
  padding: 0 20px;
  font-size: 15px;
  font-weight: bold;
  }
  
  input[type=Submit] {
   text-transform: uppercase;
    border: none;
    color: white;
    cursor: pointer;
   font-weight: bold;
   display: block;
    margin: auto;
    position: relative;
   
   }

/* Styling for the grids*/
#gameboard {
            position:relative;
            width:250px;
            height:250px;
            float:left;
            z-index: -1;
            padding-right: 5em;
            
            
        }
        #gameboard div {
            display: inline-block;
            position:absolute;
            -webkit-box-sizing: border-box; /* Safari 3.0 - 5.0, Chrome 1 - 9, Android 2.1 - 3.x */
            -moz-box-sizing: border-box;    /* Firefox 1 - 28 */
            box-sizing: border-box;         /* Safari 5.1+, Chrome 10+, Firefox 29+, Opera 7+, IE 8+, Android 4.0+, iOS any */
            background: #f6f8f9; /* Old browsers */
            border: 3px solid black;
            width:30px;
            height:30px;
        }
        #gameboard :hover {
            background-color: #3333ff;
        }
        .hit {
            background: red;
        }
        #side {
            position: absolute;
            right: 16px;
            font-size: 18px;
        }
        #aigameboard {
            position: relative;
            width:400px;
            height:400px;
            float:left;
            z-index: -1;
        }
        #aigameboard div {
            display: inline-block;
            position:absolute;
            -webkit-box-sizing: border-box; /* Safari 3.0 - 5.0, Chrome 1 - 9, Android 2.1 - 3.x */
            -moz-box-sizing: border-box;    /* Firefox 1 - 28 */
            box-sizing: border-box;         /* Safari 5.1+, Chrome 10+, Firefox 29+, Opera 7+, IE 8+, Android 4.0+, iOS any */
            background: #f6f8f9; /* Old browsers */
            border: 3px solid black;
            width:50px;
            height:50px; 
        }
        #aigameboard :hover {
            background-color: #3333ff;
        }  
        
        
        
             /* styling for pop up and overlay */
                    
             .overlay {
            position: fixed;
            top: 0;
            bottom: 0;
            left: 0;
            right: 0;
            background: rgba(0, 0, 0, 0.7);
            transition: opacity 500ms;
            visibility: hidden;
            opacity: 0;
            }
        .overlay:target {
            visibility: visible;
            opacity: 1;
        }       
                          
            .popup {
            margin: 70px auto;
            padding: 20px;
            background: #fff;
            border-radius: 5px;
            width: 70%;
            position: relative;
            transition: all 5s ease-in-out;
        }

         .popup h2 {
            margin-top: 0;
            color: #333;
            font-family: Tahoma, Arial, sans-serif;
            text-decoration: underline
        }
        .popup h3 {

            color: #333;
            font-family: Tahoma, Arial, sans-serif;
            font-size: 300%
        }
        .popup .close {
            position: absolute;
            top: 20px;
            right: 30px;
            transition: all 200ms;
            font-size: 30px;
            font-weight: bold;
            text-decoration: none;
            color: #333;
        }
        .popup .close:hover {
            color: #06D85F;
        }
        .popup .content {
            max-height: 20%;
            overflow: auto;
        }
        
        .content {
        position: relative;
        
        }
      .content p {
      margin-bottom: 10px;
       }
        
          /* styling for mobile devices */
          
       

